--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -4,6 +4,11 @@
 <div id="randomness">
 	<%= render "layouts/random" %>
 </div>
+<section class="calendarArea">
 <div id="calendar">
 	<%= render "layouts/calendar" %>
 </div>
+<div class="large-7 large-centered columns footer">
+		<%= link_to("Funky Calendar", '/') %> - Designed and Developed by <a href="http://staticsteven.com">@staticsteven</a> - Icons from <a href="http://thenounproject.com/">@nounproject</a>
+</div>
+</section>
