Updated styling options

--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -4,6 +4,7 @@
 <div id="randomness">
 	<%= render "layouts/random" %>
 </div>
+</section>
 <section class="calendarArea">
 <div id="calendar">
 	<%= render "layouts/calendar" %>
