--- a/app/views/layouts/_today.html.erb
+++ b/app/views/layouts/_today.html.erb
@@ -11,7 +11,7 @@
 					<%= image_tag("http://placehold.it/100x100", :class => "img img-circle pull-left") %>
 				<% end %>
 				<span id="eventName">It's <%= event.title %>!</span><br>
-				<%= link_to("(Source)", event.link, :class =>"source") %>
+				<%= link_to("More Information", event.link, :class =>"source") %>
 		</div>
 		<% end %>
 	<% end %>
