--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+  <section class="tophalf">
 	<div class="header">
 		<h1>Wondering what wacky day it is today?</h1>
 	</div>
