--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -2,246 +2,29 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-/*body {
-	background-color: white;
-	color: black;
-	font-family: 'Lato', sans-serif;
-}
-
-.header {
-	min-height: 50px;
-	text-align: center;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	margin-bottom: 30px;
-}
-
-.header a {
-	color: black;
-}
-
-.header a:hover {
-	text-decoration: none;
-}
-
-@media (max-width: 768px) {
-
-	.todayEvent {
-		min-height: 150px !important; 
-	}
-
-	.dateToday {
-		margin-left: 35%;
-	}
-
-	#calendar {
-		width: 100% !important;
-	}
-
-}
-
-@media (max-width: 624px) {
-	.dateToday {
-		margin-left: 32%;
-	}
-}
-
-@media (max-width: 499px) {
-	.dateToday {
-		margin-left: 25%;
-	}
-}
-
-@media (max-width: 767px) {
-	#randomness {
-	width: 100% !important;
-	}
-
-	
-}
-
-@media (min-width: 768px) {
-
-
-	#randomness {
-	text-align: center;
-	}
-
-}
-
-
-table {
-}
-
-
-h1, h4 {
-	margin-left: 30px;
-}
-
-h3 {
-	text-align: center;
-}
-
-button {
-	width: 100%;
-	height: 40px;
-	background-color: white;
-	border: none;
-	font-family: 'Lato', sans-serif;
-	font-size: 18px;
-}
-
-
-td {
-	width: 60px;
-	padding: 0px;
-	margin: 0px;
-}
-
-td a {
-	color: black;
-}
-
-td a:hover {
-	text-decoration: none;
-}
-
-
-
-.dateToday {
-	width: 180px;
-	text-align: center;
-	min-height: 140px;
-	padding: 5px;
-	margin-bottom: 30px;
-}
-
-#dayDate {
-	font-size: 110px;
-	font-weight: bold;
-	line-height: 120px;
-}
-
-.calendarBox {
-	border: 6px solid black;
-	padding: 0px 20px 20px 20px;
-	text-align: center;
-}
-
-.todayEvent {
-	border: 6px solid black;
-	min-height: 110px;
-	color: black;
-	padding: 20px;
-	margin-bottom: 20px;
-}
-
-#calendar {
-	clear: both;
-	font-size: 12px;
-	text-align: center;
-	width: 40%;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.eventName {
-	display: inline;
-	font-size: 24px;
-	font-weight: bold;
-}
-
-img {
-	margin-right: 10px; 
-	margin-left: -10px;
-	display: inline; 
-	height: 110px;
-}
-
-.day {
-	font-size: 20px;
-	width: 20px;
-	padding: 0px;
-}
-
-.dayBtn {
-	width: 100%;
-	height: 20px;
-	margin: 0px;
-	border-radius: 0px;
-	border: none;
-	background: white;
-	box-shadow: none;
-}
-
-#month {
-	text-align: center;
-}
-
-.eventSource {
-	font-size: 10px;
-	color: black;
-}
-
-
-
-#random {
-	margin-bottom: 20px;
-	width: 100px;
-	height: 20px;
-	padding: 10px;
-	border-radius: 0px;
-	border: none;
-	box-shadow: none;
-}
-
-.btnToday {
-	background: #2c3e52;
-	float: right;
-}
-
-.btnToday:hover {
-	background: #2c3e52;
-}
-
-.btnRandom {
-	background: #f06f6f;
-	float: left;
-}
-
-.btnRandom:hover {
-	background: #f06f6f;
-}
-
-.randomButton a {
-	color: white;
-}
-
-	#month a {
-		color: black;
-	}
-
-	#month a:hover {
-		text-decoration: none;
-	}
-
-.table {
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.randomButton a:hover {
-	color: white;
-} */
-
-
 body, h1, h2, h3, h4, h5, h6 {
 	text-align: center;
 	font-family: 'Lato', serif;
 	color: #4A4A4A;
 }
 
+body {
+	background-color: #4CA3B0;
+}
+
+h1 {
+	margin-top: none;
+}
+
 /* Top Half */
+
+.tophalf {
+	background-color: white;
+	width: 100%;
+	padding: none;
+	margin: none;
+	border-bottom: 1px solid #48767D;
+}
 
 /* Today's Date */
 
@@ -287,7 +70,7 @@ body, h1, h2, h3, h4, h5, h6 {
 	}
 
 	.source {
-	font-size: 10px;
+	font-size: 12px;
 	color: black;
 	}
 
@@ -323,11 +106,9 @@ body, h1, h2, h3, h4, h5, h6 {
 
 	.calendarArea, {
 		width: 100%;
-		background-color: #4CA3B0;
 		padding-top: 5vh;
 		padding-bottom: 15vh;
 		margin: none;
-		min-height: 400px;
 	}
 
 	.calendarBox {
@@ -351,6 +132,10 @@ body, h1, h2, h3, h4, h5, h6 {
 	.day {
 		font-size: 20px;
 		padding: 0px;
+	}
+
+	.today, .today .dayBtn {
+		background-color: #48767D;
 	}
 
 	.dayBtn {
