--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -6,6 +6,7 @@ body, h1, h2, h3, h4, h5, h6 {
 	text-align: center;
 	font-family: 'Lato', serif;
 	color: #4A4A4A;
+	-webkit-font-smoothing: antialiased;
 }
 
 body {
