Fixed the brokenness

--- a/app/views/layouts/_today.html.erb
+++ b/app/views/layouts/_today.html.erb
@@ -3,7 +3,7 @@
 		<div class="row">
 			<%= todays_events %>
 		<div class="large-8 columns todayEvent">
-			<% @events.each do |event| %>
+			<% @event.each do |event| %>
 			<% if event.eventdate === @eventDate %>
 				<% if event.image %>
 					<%= image_tag("/assets/#{event.image}") %>
